Minor fix for tmux. Set color, syntax, pathogen etc to vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,12 @@
 # Main
+set -g default-terminal "xterm-256color"
 set -g default-command bash
 set -g status-right "#(uptime|awk '{print $11}') #(date)"
-set -g default-terminal "screen-256color"
-set -g bell-action none
 set -g escape-time 1
 set -g base-index 1
 set -g pane-base-index 1
-set -g display-panes-time 10001
+set -g bell-action none
+set -g display-panes-time 10000
 
 # Statusbar properties.
 set -g status-position top
@@ -22,7 +22,7 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# Splits
+# Window splits
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
@@ -31,6 +31,8 @@ bind Escape copy-mode
 setw -g mode-keys vi
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
+unbind p
+bind p paste-buffer
 
 # Misc
-bind S setw sychronize-panes
+bind S setw synchronize-panes
